# ai-teacher-stack

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  COPYING.md  Makefile  NOTICE.md  README.md  docker-compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.json
.obsidian/: workspace.json
ai-teacher-stack/: AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
docs/: agent-client-setup.md  architecture.md  codex-setup.md  contributor-setup.md  pre-release-guide.md  privacy-boundary.md  release-policy.md  roadmap.md  teacher-memory-wiki.md  user-quickstart.md
prompts/: lesson-planner.md
scripts/: bootstrap-github-public.sh  build_release.py  check-pre-release.ps1  check-pre-release.sh  init-vault.sh  start-pre-release.ps1  start-pre-release.sh  stop-pre-release.ps1  stop-pre-release.sh  (+1 more)
services/teacher_tools/: Dockerfile  pyproject.toml
services/teacher_tools/src/teacher_tools/: api.py  claude_os.py  curriculum.py  documents.py  lessons.py  mcp_server.py  memory.py  privacy.py  schriftwesen.py  settings.py  stack_status.py
services/teacher_tools/src/teacher_tools/bycs/: README.md  __init__.py  __main__.py  board_export.py  drive_export.py  export_profile.py  models.py  office_export.py  privacy.py  spaces.py
services/teacher_tools/tests/: test_api_claude_os.py  test_api_memory.py  test_api_status.py  test_bycs.py  test_compose_runtime.py  test_curriculum.py  test_documents.py  test_lessons.py  test_mcp_server.py  test_memory.py  test_privacy.py  test_release_boundary.py  test_schriftwesen.py
(+97 files in other folders)
